Changed h2 to h1, added media-queries to fix issue on mobile devices

--- a/src/style.css
+++ b/src/style.css
@@ -96,11 +96,23 @@ html {
   text-decoration: none;
 }
 
-@media (max-width: 576px) {
+@media (max-width: 768px) {
+  .text {
+    font-size: 25px;
+  }
   .text-quote {
     font-size: 10px;
   }
   .photo-source {
     font-size: 8px;
+  }
+  .img1,
+  .img2,
+  .img3 {
+    background-position: center;
+    background-size: cover;
+    position: relative;
+    background-attachment: fixed; /* this makes the magic */
+    background-repeat: no-repeat;
   }
 }
